[package]
name = "netscan-os"
version = "0.15.4"
authors = ["shellrow <shellrow@protonmail.com>"]
edition = "2021"
description = "TCP/IP stack fingerprinting library for netscan"
repository = "https://github.com/shellrow/netscan"
readme = "../README.md"
keywords = ["network","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rayon = "1.7"
rand = "0.8"
default-net = "0.17"
pnet_packet = "0.34"
pnet_datalink = "0.34"
np-listener = "0.5"
