[package]
name = "netscan-os"
version = "0.21.0"
authors = ["shellrow <shellrow@protonmail.com>"]
edition = "2021"
description = "TCP/IP stack fingerprinting library for netscan"
repository = "https://github.com/shellrow/netscan"
readme = "../README.md"
keywords = ["network","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rayon = "1.7"
rand = "0.8"
default-net = "0.18"
cross-socket = "0.8"
