[package]
name = "netscan-os"
version = "0.26.0"
authors = ["shellrow <shellrow@protonmail.com>"]
edition = "2021"
description = "TCP/IP stack fingerprinting library for netscan"
repository = "https://github.com/shellrow/netscan"
readme = "../README.md"
keywords = ["network","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rayon = "1.8"
rand = "0.8"
default-net = "0.21"
xenet = "0.4"
netscan-pcap = { path = "../netscan-pcap", version = "0.26.0" }
