[package]
name = "netscan-service"
version = "0.14.0"
authors = ["shellrow <shellrow@protonmail.com>"]
edition = "2021"
description = "Service detection library for netscan"
repository = "https://github.com/shellrow/netscan"
readme = "../README.md"
keywords = ["network","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rayon = "1.7.0"
dns-lookup = "2.0.2"
rustls = "0.21.1"
rustls-native-certs = "0.6.2"
