[package]
name = "netscan-service"
version = "0.16.0"
authors = ["shellrow <shellrow@protonmail.com>"]
edition = "2021"
description = "Service detection library for netscan"
repository = "https://github.com/shellrow/netscan"
readme = "../README.md"
keywords = ["network","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rayon = "1.7"
dns-lookup = "2.0"
rustls = {version="0.21", features=["dangerous_configuration"]}
rustls-native-certs = "0.6"
